--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Cash register app | Calculate your balance amout right here</title>
-</head>
-<body>
-    <h1>Cash Register Manager</h1>
-</body>
+  </head>
+  <body>
+    <main class="container">
+      <h1 class="heading">Cash Register Manager</h1>
+      <p class="description">
+        Enter the bill amount and cash given by the customer and know minimum
+        number of notes to be returned.
+      </p>
+
+      <div class="form">
+        <!-- Bill -->
+        <div class="form_bill">
+          <label for="bill-amount">Bill Amount:</label>
+          <input type="number" name="bill-amount" id="bill-amount" />
+        </div>
+        <!-- Cash -->
+        <div class="form_cash">
+          <label for="cash-given">Cash Given:</label>
+          <input type="number" name="cash-given" id="cash-given" />
+        </div>
+        <!-- Button -->
+        <button class="btn-check">Check</button>
+        <!-- Table -->
+        <table class="change-table">
+            <caption>Return Change:</caption>
+            <tr>
+                <th>No. of notes</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr class="change-table_note">
+                <th>Note</th>
+                <td>2000</td>
+                <td>500</td>
+                <td>100</td>
+                <td>20</td>
+                <td>10</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+        </table>
+      </div>
+    </main>
+    <script src="script/main.js"></script>
+  </body>
 </html>
