Add calculate logic

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </caption>
         <tr>
           <th>No. of notes</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
+          <td class="no-of-notes"></td>
         </tr>
         <tr class="change-table_note">
           <th>Note</th>
