--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <caption>
           Return Change:
         </caption>
-        <tr>
+        <tr class="change-table_count">
           <th>No. of notes</th>
           <td class="no-of-notes"></td>
           <td class="no-of-notes"></td>
